@@ -828,11 +828,38 @@ static struct {
   {  4000000483UL,189961831},
   {  4222234741UL,200000000},
 #if BITS_IN_LONG == 64
+  { 5336500537UL,   250000000L},
+  { 6461335109UL,   300000000L},
+  { 7594955549UL,   350000000L},
+  { 8736028057UL,   400000000L},
+  { 9883692017UL,   450000000L},
   { 11037271757UL,  500000000L},
+  { 13359555403UL,  600000000L},
+  { 15699342107UL,  700000000L},
+  { 18054236957UL,  800000000L},
+  { 20422213579UL,  900000000L},
   { 22801763489UL, 1000000000L},
   { 47055833459UL, 2000000000L},
+  { 71856445751UL, 3000000000L},
+  { 97011687217UL, 4000000000L},
   {122430513841UL, 5000000000L},
+  {148059109201UL, 6000000000L},
+  {173862636221UL, 7000000000L},
   {200000000507UL, 8007105083L},
+  {225898512559UL, 9000000000L},
+  {252097800623UL,10000000000L},
+  {384489816343UL,15000000000L},
+  {518649879439UL,20000000000L},
+  {654124187867UL,25000000000L},
+  {790645490053UL,30000000000L},
+  {928037044463UL,35000000000L},
+ {1066173339601UL,40000000000L},
+ {1344326694119UL,50000000000L},
+ {1624571841097UL,60000000000L},
+ {1906555030411UL,70000000000L},
+ {2190026988349UL,80000000000L},
+ {2474799787573UL,90000000000L},
+ {2760727302517UL,100000000000L}
 #endif
 };
 static const int prime_table_len = numberof(prime_table);
